// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search /> Tests should render correctly and match snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 5,
    }
  }
>
  <TextInput
    autoCapitalize="words"
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Search"
    placeholderTextColor="#A0C2AD"
    returnKeyType="search"
    style={
      {
        "color": "#000",
        "flex": 1,
        "fontSize": 16,
      }
    }
    testID="search-input"
  />
</View>
`;

exports[`<Search /> Tests should render correctly and match snapshot with clear button 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "display": "flex",
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 5,
    }
  }
>
  <TextInput
    autoCapitalize="words"
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Search"
    placeholderTextColor="#A0C2AD"
    returnKeyType="search"
    style={
      {
        "color": "#000",
        "flex": 1,
        "fontSize": 16,
      }
    }
    testID="search-input"
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "padding": 5,
      }
    }
    testID="search-input-clear-button"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#808080",
            "fontSize": 25,
          },
          undefined,
          {
            "fontFamily": "Material Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;
